--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MyCampusFriend>>>Login</title>
+	<title>MyCampusFriend>>>Home</title>
 </head>
 <body>
 	<style>
@@ -33,7 +33,7 @@
     <header>
         <div class="logo">MyCampusFriend</div>
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
+           
             <li><a href="map.html">Maps</a></li>
             <li><a href="Academic.html">Academic Report</a></li>
             <li><a href="booking.html">Bookings</a></li>
