--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
 		}
 
 		.login-form {
-			background-color: ;
+			background-color: linear-gradient(to bottom, skyblue, white) ;
 			padding: 20px;
 			border-radius: 12px;
 			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
