--- a/Index.html
+++ b/Index.html
@@ -91,7 +91,7 @@
 </head>
 	<body>
 	<div class="marquee-container">
-		<img src="images.JPEG" alt="Campus Banner">
+		<img src="CampusLogo.png" alt="Campus Banner">
 	</div>
 <h1>Welcome to MyCampusFriend</h1>
 <div class="paragraph">
