--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,8 @@
 		.marquee-container {
  			width: 100vw;
  			overflow: hidden;
-  			height: 300px;
-  			padding: 50px 0;
+  			height: 350px;
+  			padding: 10px ;
  			position: relative;
  			z-index: 10;
 }
