--- a/home.html
+++ b/home.html
@@ -6,10 +6,15 @@
     <title>MyCampusFriend &raquo; Home</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to bottom, skyblue, white);
+			margin: 0;
+			padding: 0;
+			background: linear-gradient(to bottom, skyblue, white);
+			font-family: Arial, sans-serif;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			min-height: 100vh;
         }
         header {
             background-color: skyblue;
