--- a/home.html
+++ b/home.html
@@ -6,10 +6,14 @@
     <title>MyCampusFriend &raquo; Home</title>
     <style>
         body {
-			margin: 0;
-			padding: 0;
-			background: linear-gradient(to bottom, skyblue, white);
-        }
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, skyblue, white);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+}
         header {
             background-color: skyblue;
             padding: 15px;
