--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             background-size: cover;
 }
         header {
-            background-color: skyblue;
+            background-color: rgb(107, 199, 235);
             padding: 15px;
             display: flex;
             justify-content: space-between;
@@ -97,27 +97,22 @@
                 <tr>
                     <th>Event</th>
                     <th>Date</th>
-                    <th>Time</th>
                 </tr>
                 <tr>
                     <td>Science Fair</td>
                     <td>Aug 15, 2025</td>
-                    <td>13:00 - 17:00</td>
                 </tr>
                 <tr>
                     <td>Club Meeting</td>
                     <td>Aug 20, 2025</td>
-                    <td>15:00 - 15:30</td>
                 </tr>
                  <tr>
                     <td>SRC Meeting</td>
                     <td>Aug 21, 2025</td>
-                    <td>14:00 - 14:30</td>
                 </tr>
                  <tr>
                     <td>Sports Day</td>
                     <td>Sep 5, 2025</td>
-                    <td>09:00 - 17:00</td>
                 </tr>
             </table>
         </div>
@@ -126,24 +121,24 @@
             <h3>Your Schedule</h3>
             <table>
                 <tr>
-                    <th>Activity</th>
                     <th>Time</th>
+                    <th>Activity</th>
                 </tr>
                 <tr>
-                    <td>Project Meeting</td>
                     <td>08:00 - 09:30</td>
+                    <td>Math Lecture</td>
                 </tr>
                 <tr>
-                    <td>Programming 101</td>
                     <td>10:00 - 11:30</td>
+                    <td>Project Meeting</td>
                 </tr>
                 <tr>
-                    <td>System design</td>
-                    <td>11:30 - 12:30</td>
+                    <td>10:00 - 11:30</td>
+                    <td>Project Meeting</td>
                 </tr>
                 <tr>
-                    <td>Class Quiz</td>
-                    <td>13:00 - 13:30</td>
+                    <td>10:00 - 11:30</td>
+                    <td>Project Meeting</td>
                 </tr>
             </table>
         </div>
