--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
     </header>
 
     <div class="welcome">
-        <p>Welcome back to MyCampusFriend! Here’s a quick look at your upcoming events and schedule.</p>
+        <p>Welcome back to MyCampusFriend! Here's a quick look at your upcoming events and schedule.</p>
     </div>
 
     <div class="dashboard">
