--- a/Academic.html
+++ b/Academic.html
@@ -7,12 +7,122 @@
 </head>
 <body>
 	<style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom,  skyblue, white);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+        .welcome-paragraph{
+            text-align: justify;
+            background-color: rgb(5, 14, 143);
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(93, 255, 187, 0.1);
+            max-width: 800px;
+            margin: 30px auto;
+            font-size: 16px;
+            line-height: 1.6;
+            color: #333;
+        }
+        .grades-boxes {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin: 20px auto;
+        max-width: 1000px;
+        padding: 0 20px;
+        }
+
+        .grade-box {
+        background-color: rgb(5, 14, 143);
+        flex: 1 1 250px;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        }
+
+        .grade-box h4 {
+        margin-top: 0;
+        color: #ffffff;
+        }
+        p{
+            color: white;
+        }
+         .Clickers {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 20px;
+        margin: 20px auto;
+        max-width: 1000px;
+        padding: 0 20px;
+        }
+
+        .Click-box {
+        background-color: rgb(5, 14, 143);
+        flex: 1 1 250px;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        }
+
+        .Click-box {
+        margin-top: 0;
+        color: #007bff;
+        }
 		header {
-            background-color: skyblue;
+            background-color: rgb(5, 14, 143);
             padding: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+        }
+        .animated-text {
+        opacity: 0;
+        transform: translateY(20px);
+        transition: all 0.8s ease-out;
+        }
+
+        .animated-text.visible {
+        opacity: 1;
+        transform: translateY(0);
+        }
+        .hover-effect-paragraph {
+        padding: 20px;
+        background-color: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        cursor: default;
+        font-size: 1.1rem;
+        line-height: 1.6;
+        }
+        .grade-box:hover {
+        animation: waterRipple 1.5s infinite;
+        }
+
+        @keyframes waterRipple {
+        0%, 100% {
+            filter: brightness(1) saturate(1);
+            transform: translateY(0);
+        }
+        50% {
+            filter: brightness(1.1) saturate(1.3);
+            transform: translateY(-5px) scale(1.02);
+        }
+        }
+        .hover-effect-paragraph:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 20px rgba(0, 123, 255, 0.3);
+        background-color: #f0f8ff;
+        color: #007bff;
         }
         .logo {
             font-size: 24px;
@@ -41,6 +151,62 @@
             <li><a href="settings.html">Settings</a></li>
         </ul>
     </header>
+    <div class="welcome-paragraph"><p class="hover-effect-paragraph" id="animated-paragraph" class="animated-text">Welcome to your Academic Report!
 
+It's your personal space to keep tabs on your academic orbit at a glance. Here you'll get an overview of your modules, grades, and student attendance.
+
+Whether you're working to keep the bar high or working toward improvement in various aspects of your business, this report will provide you with the insights to help keep you on track.
+
+It's great for tracking your deadlines, considering your goals, and studying for tests with purpose.
+
+And remember: permanent success comes with persistent effort -- and we've got your back all the way.
+
+</p></div>
+<div class="grades-boxes">
+  <div class="grade-box">
+    <h4>Mathematics</h4>
+    <p>Grade: A</p>
+    <p>Attendance: 95%</p>
+  </div>
+  <div class="grade-box">
+    <h4>Physics</h4>
+    <p>Grade: B+</p>
+    <p>Attendance: 89%</p>
+  </div>
+  <div class="grade-box">
+    <h4>Computer Science</h4>
+    <p>Grade: A+</p>
+    <p>Attendance: 98%</p>
+  </div>
+</div>
+<div class="Clickers">
+  <div class="Click-box">
+    <button>Download Document</button>
+  </div>
+  <div class="Click-box">
+   <button>Upload Document</button>
+  </div>
+  <div class="Click-box">
+    <button>Appeal to retake Test</button>
+  </div>
+</div>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const paragraph = document.getElementById("animated-paragraph");
+
+    function checkVisibility() {
+      const rect = paragraph.getBoundingClientRect();
+      const windowHeight = window.innerHeight || document.documentElement.clientHeight;
+
+      if (rect.top <= windowHeight - 100) {
+        paragraph.classList.add("visible");
+        window.removeEventListener("scroll", checkVisibility); // remove listener once triggered
+      }
+    }
+
+    window.addEventListener("scroll", checkVisibility);
+    checkVisibility(); // check on load in case it's already in view
+  });
+</script>
 </body>
 </html>
