--- a/profile.html
+++ b/profile.html
@@ -159,7 +159,7 @@
 
     <div class="profile-pic-container">
       <div style="text-align: center;">
-        <img src="PROFILE PIC" alt="Profile Picture" class="profile-pic" />
+        <img src="PROFILE PIC.png" alt="Profile Picture" class="profile-pic" />
         <div class="edit-profile">
           <a href="#" class="edit-link">Edit Profile</a>
         </div>
