--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MyCampusFriend &raquo; Home</title>
+    <title>MyCampusFriend>>>Home</title>
     <style>
         body {
             margin: 0;
