--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyCampusFriend &raquo; Bookings</title>
+  <title>MyCampusFriend>>>Bookings</title>
   <style>
     body {
       font-family: Arial, sans-serif;
