--- a/settings.html
+++ b/settings.html
@@ -130,7 +130,7 @@
                 <li><a href="Academic.html">Academic Report</a></li>
                 <li><a href="booking.html">Bookings</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="settings.html">Settings</a></li>
+                <li><a href="home.html">Home</a></li>
             </ul>
         </nav>
     </header>
