--- a/Academic.html
+++ b/Academic.html
@@ -11,16 +11,13 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom,  skyblue, white);
+            background: linear-gradient(to bottom,  white, white);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
         }
         .welcome-paragraph{
             text-align: justify;
-            background-color: rgb(5, 14, 143);
-            padding: 20px;
-            border-radius: 12px;
             box-shadow: 0 4px 12px rgba(93, 255, 187, 0.1);
             max-width: 800px;
             margin: 30px auto;
@@ -29,80 +26,83 @@
             color: #333;
         }
         .grades-boxes {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: 20px auto;
-        max-width: 1000px;
-        padding: 0 20px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 20px auto;
+            max-width: 1000px;
+            padding: 0 20px;
         }
 
         .grade-box {
-        background-color: rgb(5, 14, 143);
-        flex: 1 1 250px;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        text-align: center;
+            background-color: rgb(5, 14, 143);
+            flex: 1 1 250px;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         .grade-box h4 {
-        margin-top: 0;
-        color: #ffffff;
+            margin-top: 0;
+            color: #ffffff;
         }
         p{
             color: white;
         }
          .Clickers {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: 20px auto;
-        max-width: 1000px;
-        padding: 0 20px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 20px auto;
+            max-width: 1000px;
+            padding: 0 20px;
         }
 
         .Click-box {
-        background-color: rgb(5, 14, 143);
-        flex: 1 1 250px;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        }
-
-        .Click-box {
-        margin-top: 0;
-        color: #007bff;
-        }
-		header {
             background-color: rgb(5, 14, 143);
-            padding: 15px;
+            flex: 1 1 250px;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .Click-box {
+            margin-top: 0;
+            color: #007bff;
+        }
+       .Click-box:hover {
+        animation: waterRipple 1.5s infinite;
+        }
+		    header {
+            background-color: rgb(5, 14, 143);
+            padding: 1px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
         .animated-text {
-        opacity: 0;
-        transform: translateY(20px);
-        transition: all 0.8s ease-out;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.8s ease-out;
         }
 
         .animated-text.visible {
-        opacity: 1;
-        transform: translateY(0);
+          opacity: 1;
+          transform: translateY(0);
         }
         .hover-effect-paragraph {
-        padding: 20px;
-        background-color: white;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease;
-        cursor: default;
-        font-size: 1.1rem;
-        line-height: 1.6;
+            padding: 20px;
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            cursor: default;
+            font-size: 1.1rem;
+            line-height: 1.6;
         }
         .grade-box:hover {
         animation: waterRipple 1.5s infinite;
@@ -119,10 +119,10 @@
         }
         }
         .hover-effect-paragraph:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 20px rgba(0, 123, 255, 0.3);
-        background-color: #f0f8ff;
-        color: #007bff;
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(0, 123, 255, 0.3);
+            background-color: #f0f8ff;
+            color: #007bff;
         }
         .logo {
             font-size: 24px;
@@ -184,7 +184,7 @@ And remember: permanent success comes with persistent effort -- and we've got yo
     <button>Download Document</button>
   </div>
   <div class="Click-box">
-   <button>Upload Document</button>
+   <button>Update Document</button>
   </div>
   <div class="Click-box">
     <button>Appeal to retake Test</button>
