--- a/home.html
+++ b/home.html
@@ -9,13 +9,12 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, skyblue, white);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
 }
         header {
-            background-color: rgb(107, 199, 235);
+            background-color: rgb(5, 14, 143);
             padding: 15px;
             display: flex;
             justify-content: space-between;
@@ -58,13 +57,13 @@
             background-color: white;
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #777;
             padding: 12px;
             text-align: left;
         }
         th {
-            background-color: skyblue;
-            color: white;
+            background-color: rgb(5, 14, 143);
+            color: #fff;
         }
         .table-container {
             flex: 1;
