Nav bar changes

--- a/booking.html
+++ b/booking.html
@@ -12,7 +12,7 @@
       background-color: #f4f4f4;
     }
     header {
-      background-color: skyblue;
+      background-color: rgb(5, 14, 143);
       padding: 15px;
       display: flex;
       justify-content: space-between;
