--- a/map.html
+++ b/map.html
@@ -7,12 +7,19 @@
 </head>
 <body>
 	<style>
-		header {
-            background-color: skyblue;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: rgb(5, 14, 143);
             padding: 15px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
         }
         .logo {
             font-size: 24px;
@@ -23,6 +30,8 @@
             list-style: none;
             display: flex;
             gap: 20px;
+            padding: 0;
+            margin: 0;
         }
         .nav-links a {
             text-decoration: none;
