--- a/profile.html
+++ b/profile.html
@@ -8,25 +8,22 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
+      padding: 0;
       background-color: #f4f4f4;
-      color: #333;
     }
-
     header {
-      background-color: skyblue;
+      background-color: rgb(5, 14, 143);
       padding: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
     }
-
     .logo {
       font-size: 24px;
       font-weight: bold;
       color: white;
     }
-
     .nav-links {
       list-style: none;
       display: flex;
@@ -34,7 +31,6 @@
       padding: 0;
       margin: 0;
     }
-
     .nav-links a {
       text-decoration: none;
       color: white;
