--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-}
+        }
         header {
             background-color: rgb(5, 14, 143);
             padding: 15px;
@@ -96,22 +96,27 @@
                 <tr>
                     <th>Event</th>
                     <th>Date</th>
+                    <th>Time</th>
                 </tr>
                 <tr>
                     <td>Science Fair</td>
                     <td>Aug 15, 2025</td>
+                    <td>09:00 - 15:00</td>
                 </tr>
                 <tr>
                     <td>Club Meeting</td>
                     <td>Aug 20, 2025</td>
+                    <td>14:00 - 15:00</td>
                 </tr>
                  <tr>
                     <td>SRC Meeting</td>
                     <td>Aug 21, 2025</td>
+                    <td>14:00 - 15:00</td>
                 </tr>
                  <tr>
                     <td>Sports Day</td>
                     <td>Sep 5, 2025</td>
+                    <td>09:00 - 17:00</td>
                 </tr>
             </table>
         </div>
@@ -120,24 +125,24 @@
             <h3>Your Schedule</h3>
             <table>
                 <tr>
-                    <th>Time</th>
                     <th>Activity</th>
+                    <th>Time</th>
                 </tr>
                 <tr>
+                    <td>Project Meeting</td>
                     <td>08:00 - 09:30</td>
-                    <td>Math Lecture</td>
                 </tr>
                 <tr>
+                    <td>Programming 101</td>
                     <td>10:00 - 11:30</td>
-                    <td>Project Meeting</td>
                 </tr>
                 <tr>
-                    <td>10:00 - 11:30</td>
-                    <td>Project Meeting</td>
+                    <td>Mathematics</td>
+                    <td>12:00 - 13:30</td>
                 </tr>
                 <tr>
-                    <td>10:00 - 11:30</td>
-                    <td>Project Meeting</td>
+                    <td>Computer Science</td>
+                    <td>13:30 - 14:30</td>
                 </tr>
             </table>
         </div>
