--- a/Academic.html
+++ b/Academic.html
@@ -169,7 +169,7 @@ And remember: permanent success comes with persistent effort -- and we've got yo
     <p>Attendance: 95%</p>
   </div>
   <div class="grade-box">
-    <h4>Physics</h4>
+    <h4>Programming 101</h4>
     <p>Grade: B+</p>
     <p>Attendance: 89%</p>
   </div>
