--- a/Index.html
+++ b/Index.html
@@ -102,8 +102,8 @@
 <div class="login-form">
 		<h2>Login</h2>
 		<form>
-			<input type="text" placeholder="Student ID" required>
-			<input type="password" placeholder="ID Number" required>
+			<input type="text" placeholder="Student/Staff ID" required>
+			<input type="password" placeholder="Password" required>
 			<a href="home.html" class="button">Sign In</a>
 		</form>
 	</div>
